# template-hyperspot

./: Cargo.toml  README.md
apps/server/: Cargo.toml  build.rs
apps/server/src/: main.rs  registered_modules.rs
config/: quickstart.yaml
modules/cf-users-info/: Cargo.toml
modules/cf-users-info-sdk/: Cargo.toml
modules/cf-users-info/src/: lib.rs  module.rs
modules/cf-users-info/src/api/rest/: dto.rs
modules/cf-users-info/src/api/rest/handlers/: mod.rs  users.rs
modules/cf-users-info/src/api/rest/routes/: cities.rs  users.rs
modules/cf-users-info/src/domain/: error.rs
modules/cf-users-info/src/domain/local_client/: addresses.rs  cities.rs  client.rs  users.rs
modules/cf-users-info/src/domain/repos/: addresses_repo.rs  cities_repo.rs  users_repo.rs
modules/cf-users-info/src/domain/service/: addresses.rs  cities.rs  tests_entities.rs  tests_security_scoping.rs  users.rs
modules/cf-users-info/src/infra/storage/: addresses_sea_repo.rs  cities_sea_repo.rs  mapper.rs  odata_mapper.rs  users_sea_repo.rs
modules/cf-users-info/tests/: sdk_blackbox.rs
modules/user_info-sdk/: Cargo.toml
modules/users_info/: Cargo.toml
modules/users_info/src/api/rest/routes/: users.rs
