[package]
name = "server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
cf-modkit = { workspace = true, features = ["bootstrap", "otel"] }
cf-modkit-db = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }

cf-api-gateway = { workspace = true }
cf-tenant-resolver-gw = { workspace = true }

# Your modules
users_info = { path = "../../modules/users_info" }

