[package]
name = "server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
otel = ["cf-modkit/otel"]

[dependencies]
anyhow = { workspace = true }
cf-modkit = { workspace = true, features = ["bootstrap"] }
cf-modkit-db = { workspace = true, features = ["sqlite"] }
clap = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }

cf_api_gateway = { workspace = true }
cf_tenant_resolver_gw = { workspace = true }
cf_grpc_hub = { workspace = true }
cf_types_registry = { workspace = true }

# Your modules
cf_users_info = { workspace = true }

[build-dependencies]
cargo_toml = "0.22.3"
