[package]
name = "cf-users-info"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["odata"]
odata = []          # enable streaming API with typed queries
integration = []    # gate integration tests

[dependencies]
# SDK - public API, models, and errors
cf-users-info-sdk = { workspace = true, features = ["odata"] }

# Tenant resolver for multi-tenant access
cf-tenant-resolver-sdk = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

# Serde and JSON schema
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["time"] }

# HTTP and REST
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["timeout"] }
futures-util = { workspace = true }
http = { workspace = true }

# Time handling
time = { workspace = true }

# URL parsing
url = { workspace = true }

# UUID support
uuid = { workspace = true }

# Lock-free atomic swaps
arc-swap = { workspace = true }

# Database - SeaORM
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
    "with-uuid",
] }
sea-orm-migration = { workspace = true, features = ["sqlx-sqlite"] }

# Error handling
thiserror = { workspace = true }

# Local dependencies
cf-modkit = { workspace = true }
cf-modkit-db = { workspace = true, features = ["sqlite"] }
cf-modkit-db-macros = { workspace = true }
cf-modkit-security = { workspace = true }
cf-modkit-errors = { workspace = true }
cf-modkit-errors-macro = { workspace = true }
cf-modkit-odata = { workspace = true, features = ["with-utoipa"] }
cf-modkit-sdk = { workspace = true }
cf-modkit-macros = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true }
serde_json = { workspace = true }
